# diary_bot

./: README.md  example.py  pyproject.toml  ruff.toml
examples/: cache.py  simple.py
src/diary/: diary.py
src/diary/methods/: __init__.py  base.py  get_short_schedules.py  get_student_profile.py  get_user_info.py
src/diary/session/: aiohttp.py
src/diary/sessions/: aiohttp.py  base.py
src/diary/types/: __init__.py  base.py  class_unit.py  curricula.py  short_schedule.py  student_profile.py  user_info.py
src/mesh_diary/: __init__.py  errors.py
src/mesh_diary/cache/: cache_adapter.py  diary_decorator.py  mediator.py
src/mesh_diary/diaries/: base.py  standard.py
src/mesh_diary/identity_maps/: base.py  ttl_identity_map.py
src/mesh_diary/methods/: __init__.py  base.py  get_short_schedules.py  get_student_profile.py  get_user_info.py
src/mesh_diary/sessions/: aiohttp.py  base.py
src/mesh_diary/types/: __init__.py  base.py  short_schedule.py  student_profile.py  user_info.py
